Get rid of deprecated jvm argument