@@ -105,18 +105,9 @@ class Utils {
                                        @NotNull File ideaDirectory) {
         if (options.maxHeapSize == null) options.maxHeapSize = "512m"
         if (options.minHeapSize == null) options.minHeapSize = "256m"
-        boolean hasPermSizeArg = false
-        List<String> result = []
-        for (String arg : originalArguments) {
-            if (arg.startsWith("-XX:MaxPermSize")) {
-                hasPermSizeArg = true
-            }
-            result += arg
-        }
-
+        List<String> result = new ArrayList<String>(originalArguments)
         def bootJar = new File(ideaDirectory, "lib/boot.jar")
         if (bootJar.exists()) result += "-Xbootclasspath/a:$bootJar.absolutePath"
-        if (!hasPermSizeArg) result += "-XX:MaxPermSize=250m"
         return result
     }
 
